sandbox/output
PatientTest.java:17: error: method clash in class Patient cannot be applied to given types;
            patient.clash(Arrays.asList("Codeine", "Prozac"), 90));
                   ^
  required: List<String>,long,LocalDate
  found: List<String>,int
  reason: actual and formal argument lists differ in length
PatientTest.java:33: error: method clash in class Patient cannot be applied to given types;
            patient.clash(Arrays.asList("Codeine", "Prozac"), 90));
                   ^
  required: List<String>,long,LocalDate
  found: List<String>,int
  reason: actual and formal argument lists differ in length
PatientTest.java:49: error: method clash in class Patient cannot be applied to given types;
            patient.clash(Arrays.asList("Codeine", "Prozac"), 90));
                   ^
  required: List<String>,long,LocalDate
  found: List<String>,int
  reason: actual and formal argument lists differ in length
PatientTest.java:65: error: method clash in class Patient cannot be applied to given types;
            patient.clash(Arrays.asList("Codeine", "Prozac"), 90));
                   ^
  required: List<String>,long,LocalDate
  found: List<String>,int
  reason: actual and formal argument lists differ in length
PatientTest.java:81: error: method clash in class Patient cannot be applied to given types;
            patient.clash(Arrays.asList("Codeine", "Prozac"), 90));
                   ^
  required: List<String>,long,LocalDate
  found: List<String>,int
  reason: actual and formal argument lists differ in length
5 errors
